USA/style.css
:root {
  --unit: 100px;
  --white-color: #FFFFFF;
  --blue-color: #0A3161;
  --red-color: #b31942;
}

.flag {
  border: 1px solid black;
  width: calc(var(--unit) * 19);
  height: calc(var(--unit) * 10);
  position: relative;
}

.red-stripe {
  background: var(--red-color);
  /* outline: 3px dotted hsl(0, 0%, 100%); */
}
/* Out line for sewed like efffect or smh id */
.white-stripe {
    background: var(--white-color);
    /* outline: 3px dotted hsl(0, 0%, 96%); */
}

.stripes > * {
    width: calc(var(--unit) * 19);
    height: calc(var(--unit) * 0.769);
    /* outline: 1px solid; */
}

#star-container {
    background: hsl(212, 100%, 14%);
    width: calc(var(--unit) * 7.6);
    height: calc(var(--unit) * 5.385);
    position: absolute;
    /* outline: 3px dotted hsl(212, 100%, 14%); */
}

.star-row-6 {
  display: flex;
  justify-content: space-between;
  margin-top: calc(var(--unit)/5);
  margin: calc(var(--unit)/3) calc(var(--unit)/3);
}

.star-row-5 {
    display: flex;
    justify-content: space-evenly;
    margin-top: calc(var(--unit)/5);
}

/* Star Css Not Mine :( */

.star {
  font-size: calc(var(--unit) * 0.316); /* wrong size but idk */
  position: relative;
  display: block;
  width: 0px;
  height: 0px;
  border-right: 1em solid transparent;
  border-bottom: 0.7em solid var(--white-color);
  border-left: 1em solid transparent;
  transform: rotate(35deg);
}
.star:before {
  border-bottom: 0.8em solid var(--white-color);
  border-left: 0.3em solid transparent;
  border-right: 0.3em solid transparent;
  position: absolute;
  height: 0;
  width: 0;
  top: -0.45em;
  left: -0.65em;
  display: block;
  content: "";
  transform: rotate(-35deg);
}
.star:after {
  position: absolute;
  display: block;
  top: 0.03em;
  left: -1.05em;
  width: 0;
  height: 0;
  border-right: 1em solid transparent;
  border-bottom: 0.7em solid var(--white-color);
  border-left: 1em solid transparent;
  transform: rotate(-70deg);
  content: "";
}

